--- a/index.html
+++ b/index.html
@@ -321,4 +321,10 @@ href="http://dascritch.net/category/Sortons">Sortons</a></li></ul></div>	</nav> 
 	<div id="blogcustom">
 			</div> 
 
-</footer></div></body></html>
+</footer>
+	
+</div>
+	
+</body>
+	
+</html>
