--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
 <link rel="stylesheet" type="text/css" href="./floatlabel.css" />
 <script type="text/javascript" src="./floatlabel.js"></script>
 
+<!-- repompé de @nico3333fr -->
+<!-- Facebook -->
+<meta property="og:title" content="{{tpl:EntryTitle encode_html="1"}}" />
+<meta property="og:description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
+<meta property="og:image" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}" />
+<!-- Google +1 -->
+<meta itemprop="name" content="{{tpl:EntryTitle encode_html="1"}}" />
+<meta itemprop="description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
+<meta itemprop="image" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}" />
+<!-- Twitter -->
+<meta name="twitter:card" content="summary" />
+<meta name="twitter:url" content="{{tpl:EntryURL}}" />
+<meta name="twitter:title" content="{{tpl:EntryTitle encode_html="1"}}" />
+<meta name="twitter:description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
+<meta name="twitter:image:src" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}"/>
+<meta name="twitter:site" content="@dascritch" />
+<meta name="twitter:creator" content="@dascritch" />
+
 </head>
 <body class="dc-post">
 <ul id="breadcrumb" xmlns:v="http://rdf.data-vocabulary.org/#">
