petites modifs notamment sur l aide

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 				<input name="c_name" id="c_name" size="30" maxlength="255" required="required" type="text" placeholder="Nom ou pseudo&nbsp;:">
 			</p>
 			
-			<p class="field"><label for="c_mail">Adresse email&nbsp;:</label>
-				<input name="c_mail" id="c_mail" size="30" maxlength="255" required="required" type="email" placeholder="Adresse email&nbsp;:">
+			<p class="field"><label for="c_mail">Adresse e-mail&nbsp;:</label>
+				<input name="c_mail" id="c_mail" size="30" maxlength="255" required="required" type="email" placeholder="Adresse e-mail&nbsp;:">
 			</p>
 			
 			<p class="field"><label for="c_site">Site web (facultatif)&nbsp;:</label>
@@ -176,14 +176,15 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 			</p>
 			
 			<p style="display:none">
-				<input name="f_mail" size="30" maxlength="255" type="text"  placeholder="Adresse email&nbsp;:">
+				<input name="f_mail" size="30" maxlength="255" type="text"  placeholder="Adresse e-mail&nbsp;:">
 			</p>
 			
 			<p class="field"><label for="c_content">Commentaire&nbsp;:</label>
 				<textarea name="c_content" id="c_content" cols="35" rows="7" required="required" placeholder="Commentaire&nbsp;:"></textarea>
+				<span class="form-help" id="form-help">Le code HTML est affiché comme du texte et les adresses web sont automatiquement transformées.</span>
 			</p>
 			
-			<p class="form-help">Le code HTML est affiché comme du texte et les adresses web sont automatiquement transformées.</p>
+			
 
 					</fieldset>
 		
