Avec les lignes de séparation

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 			</p>
 
 		</fieldset>
-		<fieldset>
+		<fieldset id="comment-2ndline">
 
 			<p class="field"><label for="c_mail">Adresse e-mail&nbsp;:</label>
 				<input name="c_mail" id="c_mail" size="30" maxlength="255" required="required" type="email" placeholder="Adresse e-mail&nbsp;:">
@@ -182,16 +182,16 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 				<input name="f_mail" size="30" maxlength="255" type="text"  placeholder="Adresse e-mail&nbsp;:">
 			</p>
 			
+		</fieldset>
+		<fieldset id="comment-3rdline">
+
 			<p class="field"><label for="c_content">Commentaire&nbsp;:</label>
 				<textarea name="c_content" id="c_content" cols="35" rows="7" required="required" placeholder="Commentaire&nbsp;:"></textarea>
 				<span class="form-help" id="form-help">Le code HTML est affiché comme du texte et les adresses web sont automatiquement transformées.</span>
 			</p>
-			
-			
-
-					</fieldset>
+		</fieldset>
 		
-		<fieldset>
+		<fieldset id="comment-4thline">
 			<p class="remember">
 				<button class="preview" name="preview" type="submit">prévisualiser</button>
 				
