--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 				<input name="c_name" id="c_name" size="30" maxlength="255" required="required" type="text" placeholder="Nom ou pseudo&nbsp;:">
 			</p>
 			
-			<p class="field"><label for="c_site">Site web (facultatif)&nbsp;:</label>
+			<p class="field" id="g_site"><label for="c_site">Site web (facultatif)&nbsp;:</label>
 				<input name="c_site" id="c_site" size="30" maxlength="255" type="url" placeholder="Site web (facultatif)&nbsp;:">
 			</p>
 
