faire apparaitre le bouton de valid que si valide

--- a/index.html
+++ b/index.html
@@ -192,7 +192,8 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 		
 		<fieldset id="comment-4thline">
 			<p class="remember">
-				<button class="preview" name="preview" type="submit">prévisualiser</button>
+				<button class="preview" name="preview" id="preview" type="submit">prévisualiser</button>
+				<label class="form-help" for="preview">(votre texte sera publié après validation)</label>
 				
 			</p>
 		</fieldset>
