--- a/index.html
+++ b/index.html
@@ -10,41 +10,10 @@
 	<!-- media queries -->
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<link rel="stylesheet" type="text/css" href="http://dascritch.net/themes/DSN13/compressed.css" />
-
-
-<script type="text/javascript" src="http://dascritch.net/themes/DSN13/jquery.js"></script>
-<script type="text/javascript" src="http://dascritch.net/themes/DSN13/jquery.lightbox.X.js"></script>
-<script type="text/javascript" src="http://dascritch.net/themes/default/js/jquery.cookie.js"></script>
-<script type="text/javascript" src="http://dascritch.net/themes/DSN13/ductile.js"></script>
-  <script type="text/javascript" src="http://dascritch.net/themes/default/js/post.js"></script>
-	<script type="text/javascript">
-		var post_remember_str = 'Se souvenir de moi sur ce blog';
-	</script>
-
-
+<link rel="stylesheet" type="text/css" href="theme-dascritch-net/aspect.css" />
+<script type="text/javascript" src="theme-dascritch-net/jquery.js"></script>
 <link rel="stylesheet" type="text/css" href="./floatlabel.css" />
 <script type="text/javascript" src="./floatlabel.js"></script>
-
-<!--  Cadeau pour les copaings : balisage "social" en dotclear
-<!-- repompé de @nico3333fr - ->
-<!- - Facebook - ->
-<meta property="og:title" content="{{tpl:EntryTitle encode_html="1"}}" />
-<meta property="og:description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
-<meta property="og:image" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}" />
-<!- - Google +1 - ->
-<meta itemprop="name" content="{{tpl:EntryTitle encode_html="1"}}" />
-<meta itemprop="description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
-<meta itemprop="image" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}" />
-<!- - Twitter - ->
-<meta name="twitter:card" content="summary" />
-<meta name="twitter:url" content="{{tpl:EntryURL}}" />
-<meta name="twitter:title" content="{{tpl:EntryTitle encode_html="1"}}" />
-<meta name="twitter:description" content="{{tpl:EntryContent full="1" encode_html="1" remove_html="1" cut_string="180"}}" />
-<meta name="twitter:image:src" content="http://dascritch.net{{tpl:EntryFirstImage size="s" no_tag="1"}}"/>
-<meta name="twitter:site" content="@dascritch" />
-<meta name="twitter:creator" content="@dascritch" />
--->
 
 </head>
 <body class="dc-post">
