--- a/index.html
+++ b/index.html
@@ -134,24 +134,24 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 
 		<fieldset id="comment-1stline">
 			<p class="field">
-				<input name="c_name" id="c_name" maxlength="255" required="required" type="text" placeholder="Nom ou pseudo&nbsp;:">
+				<input name="c_name" id="c_name" maxlength="255" required="required" type="text" placeholder="Nom ou pseudo&nbsp;:" />
 				<label for="c_name">Nom ou pseudo&nbsp;:</label>
 			</p>
 			
 			<p class="field" id="g_site">
-				<input name="c_site" id="c_site" maxlength="255" type="url" placeholder="Site web (facultatif)&nbsp;:">
+				<input name="c_site" id="c_site" maxlength="255" type="url" placeholder="Site web (facultatif)&nbsp;:" />
 				<label for="c_site">Site web (facultatif)&nbsp;:</label>
 			</p>
 		</fieldset>
 
 		<fieldset id="comment-2ndline">
 			<p class="field">
-				<input name="c_mail" id="c_mail" maxlength="255" required="required" type="email" placeholder="Adresse e-mail&nbsp;:">
+				<input name="c_mail" id="c_mail" maxlength="255" required="required" type="email" placeholder="Adresse e-mail&nbsp;:" />
 				<label for="c_mail">Adresse e-mail&nbsp;:</label>
 			</p>
 			
 			<p style="display:none">
-				<input name="f_mail" maxlength="255" type="text" placeholder="Adresse e-mail&nbsp;:">
+				<input name="f_mail" maxlength="255" type="text" placeholder="Adresse e-mail&nbsp;:" />
 			</p>
 		</fieldset>
 
