et du message se souvenir de moi

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ Tellement bien raisonné et empli de bon sens que je vais le lire de très très
 		</fieldset>
 		
 		<fieldset id="comment-4thline">
-			<p class="remember">
+			<p class="remember" data-remember="Se souvenir de moi sur ce blog">
 				<button class="preview" name="preview" id="preview" type="submit">prévisualiser</button>
 				<label class="form-help" for="preview">(votre texte sera publié après validation)</label>
 			</p>
